--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ title                    : "Home"
 title_separator          : "-"
 name                     : &name "Akun"
 description              : &description "personal description"
-url                      : https://zzcakun.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+url                      : "https://zzcakun.github.io" # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+baseurl                  : "zzcakun/zzcakun.github.io" # the subpath of your site, e.g. "/blog"
 repository               : "zzcakun/zzcakun.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
