--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ name                     : &name "Akun"
 description              : &description "personal description"
 url                      : https://zzcakun.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "zzcakun/zzcakun.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -26,7 +26,7 @@ author:
   name             : "Zhenkun Zheng"
   pronouns         : # example: "she/her"  
   bio              : "God helps those who help themselves."
-  location         : "BeiJing"
+  location         : "Beijing,China"
   employer         : "Beijing University of Posts and Telecommunications"
   uri              : # URL
   email            : "akun@bupt.cn" 
