--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -117,7 +117,7 @@ fr: &DEFAULT_FR
   feed_label                 : "Flux"
   powered_by                 : "Propulsé par"
   website_label              : "Site"
-  email_label                : "Email"
+  email_label                : "akun@bupt.cn"
   recent_posts               : "Posts récents"
   undefined_wpm              : "Le paramètre words_per_minute n'est pas défini dans _config.yml"
   comment_form_info          :
